--- a/Jama/src/main/webapp/prove.xhtml
+++ b/Jama/src/main/webapp/prove.xhtml
@@ -12,6 +12,7 @@
 		<h:commandButton value="doJob" action="#{testBean.doJob1()}" />
 				<h:commandButton value="doJob" action="#{testBean.doJob2()}" />
 				<h:commandButton value="doJob" action="#{testBean.doJob3()}" />
+				<h:commandButton value="doDelta" action="#{testBean.doDelta()}" />
 		
 	</h:form>
 </body> 
