--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -18,7 +18,7 @@
 			</h:panelGrid>
 
 			<p:commandButton value="#{msgs.save}"
-				action="#{agreementWizardPCB.save()}"
+				action="#{agreementWizardPB.save()}"
 				actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
 
 
