--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -33,7 +33,7 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="Passo 3">
-				<sections:agreementInstallmentsList>
+				<sections:agreementInstallmentsList installmentOutcome="agreementEdit">
 				</sections:agreementInstallmentsList>
 
 
