--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -35,7 +35,7 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="Passo 3">
-				<sections:agreementInstallmentsList>
+				<sections:agreementInstallmentsList installmentOutcome="agreementCreate">
 				</sections:agreementInstallmentsList>
 
 
