--- a/Jama/src/main/webapp/installmentWiz.xhtml
+++ b/Jama/src/main/webapp/installmentWiz.xhtml
@@ -36,7 +36,7 @@
 			</p:wizard>
 
 			<h:commandButton value="#{msgs.cancel}"
-				action="#{installmentManager.cancel()}"
+				action="#{installmentWizardPB.cancel()}"
 				actionListener="#{installmentShareTablePCB.toUpdate()}"
 				immediate="true" ajax="false" />
 
