--- a/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/installmentLastStep.xhtml
@@ -19,7 +19,7 @@
 			</h:panelGrid>
 
 			<p:commandButton value="#{msgs.save}"
-				action="#{installmentManager.save()}"
+				action="#{installmentWizardPB.save()}"
 				actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
 
 
