--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -30,7 +30,7 @@
 
 
 			<p:tab id="tabRip" title="Passo 2">
-				<sections:wizShareTable editingDisable="false"
+				<sections:wizShareTable editingDisable="false" agreementTable="true"
 					bean="#{agreementShareTablePCB}" />
 			</p:tab>
 
