share table WIP

--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -30,8 +30,7 @@
 
 
 			<p:tab id="tabRip" title="Passo 2">
-				<sections:wizShareTable editingDisable="false" agreementTable="true"
-					bean="#{agreementShareTablePCB}" />
+				<sections:agreementWizShareTable editingDisable="false"  />
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="Passo 3">
