--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -41,6 +41,9 @@
 			</p:tab>
 
 			<ui:include src="/resources/sections/agreementWizAttachments.xhtml" />
+			
+			<ui:include src="/resources/sections/agreementWizLastStep.xhtml" />
+
 
 
 		</p:wizard>
@@ -75,6 +78,8 @@
 	</dialogs:companyDialog>
 
 	<dialogs:personnelShareDialog name="w_personnelShare"></dialogs:personnelShareDialog>
+	
+			
 
 
 </h:body>
