--- a/Jama/src/main/webapp/installmentWiz.xhtml
+++ b/Jama/src/main/webapp/installmentWiz.xhtml
@@ -35,7 +35,7 @@
 
 			</p:wizard>
 
-			<h:commandButton value="#{msgs.cancel}"
+			<p:commandButton value="#{msgs.cancel}"
 				action="#{installmentWizardPB.cancel()}"
 				actionListener="#{installmentShareTablePCB.toUpdate()}"
 				immediate="true" ajax="false" />
