--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -4,22 +4,20 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-	<p:tab id="tabEnd" title="Passo 3">
+	<p:tab id="tabAttachs" title="Passo 3">
 		<p:panel header="Empty">
 
 			<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
 				styleClass="grid">
 
 
-				<h:outputText value="#{msgs.shareTableCapitalBalance}:" />
+				<h:outputText value="allegati wannaBe" />
 				<br />
 				<br />
 
 			</h:panelGrid>
 
-			<p:commandButton value="#{msgs.save}"
-				action="#{agreementWizardPB.save()}"
-				actionListener="#{agreementShareTablePCB.toUpdate()}" ajax="false" />
+	
 
 
 
