--- a/Jama/src/main/webapp/installmentEdit.xhtml
+++ b/Jama/src/main/webapp/installmentEdit.xhtml
@@ -22,7 +22,7 @@
 
 			<ui:include src="/resources/sections/installmentWizData.xhtml" />
 
-			<p:tab id="tabRip" title="Passo 2">
+			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
 				<sections:wizShareTable editingDisable="false"
 					bean="#{installmentShareTablePCB}" />
 			</p:tab>
