--- a/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizAttachments.xhtml
@@ -4,24 +4,19 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-	<p:tab id="tabAttachs" title="Passo 3">
-		<p:panel header="Empty">
-
-			<h:panelGrid columns="3" columnClasses="label, value, errorMessage"
-				styleClass="grid">
+	<p:tab id="tabAttachs" title="#{msgs.attachments_Tab}">
+	
+	
 
 
 				<h:outputText value="allegati wannaBe" />
-				<br />
-				<br />
-
-			</h:panelGrid>
+		
 
 	
 
 
 
-		</p:panel>
+		
 
 	</p:tab>
 
