--- a/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizData.xhtml
@@ -14,7 +14,7 @@
 
 
 
-	<p:panel header="Tabella dei dati generali">
+	<p:panel header="#{msgs.data_header}">
 
 		<p:panelGrid id="agrDataPanelGrid">
 
