--- a/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementWizLastStep.xhtml
@@ -4,7 +4,7 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui">
 
-	<p:tab id="tabEnd" title="Fine">
+	<p:tab id="tabEnd" title="#{msgs.end__tab}">
 						
 					<h:outputText value="Congrat" />	
 						<p:commandButton value="#{msgs.save}"
