--- a/Jama/src/main/webapp/agreementWiz.xhtml
+++ b/Jama/src/main/webapp/agreementWiz.xhtml
@@ -23,17 +23,17 @@
 		<p:wizard step="#{agreementWizardPB.currentTabId}"
 			flowListener="#{agreementWizardPB.handleFlow}">
 
-			<p:tab id="tabDati" title="Dati">
+			<p:tab id="tabDati" title="#{msgs.data_Tab}">
 				<sections:agreementWizData editingDisable="false" />
 
 			</p:tab>
 
 
-			<p:tab id="tabRip" title="Passo 2">
+			<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
 				<sections:agreementWizShareTable editingDisable="false"  />
 			</p:tab>
 
-			<p:tab id="tabInstallments" title="Passo 3">
+			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
 				<sections:agreementInstallmentsList installmentOutcome="agreementCreate">
 				</sections:agreementInstallmentsList>
 
