--- a/Jama/src/main/webapp/agreementView.xhtml
+++ b/Jama/src/main/webapp/agreementView.xhtml
@@ -16,19 +16,18 @@
 	<h:panelGrid width="100%" columns="2" columnClasses="col1">
 		<h:form id="agreementWiz">
 
-			<p:growl id="growl" sticky="true" showDetail="true" />
 			<input type="hidden" name="cid"
 				value='#{agreementManager.conversation.id}' />
 
 			<p:tabView>
 
-			<p:tab id="tabDati" title="Dati">
+			<p:tab id="tabDati" title="#{msgs.data_Tab}">
 					<sections:agreementWizData editingDisable="true" />
 
 				</p:tab>
 				<ui:include src="/resources/sections/agreementWizData.xhtml" />
 
-				<p:tab id="tabRip" title="Passo 2">
+				<p:tab id="tabRip" title="#{msgs.shareTable_Tab}">
 					<sections:wizShareTable editingDisable="true"
 						bean="#{agreementShareTablePCB}" />
 				</p:tab>
@@ -37,7 +36,7 @@
 
 			</p:tabView>
 
-			<h:commandButton value="#{msgs.cancel}"
+			<p:commandButton value="#{msgs.cancel}"
 				action="#{agreementManager.cancel()}" immediate="true" />
 
 
