--- a/Jama/src/main/webapp/agreementEdit.xhtml
+++ b/Jama/src/main/webapp/agreementEdit.xhtml
@@ -33,7 +33,7 @@
 			</p:tab>
 
 			<p:tab id="tabInstallments" title="#{msgs.installmentsList_Tab}">
-				<sections:agreementInstallmentsList installmentOutcome="agreementEdit">
+				<sections:agreementInstallmentsList installmentOutcome="agreementEdit" editingDisable="false">
 				</sections:agreementInstallmentsList>
 
 
