--- a/Jama/src/main/webapp/agreementList.xhtml
+++ b/Jama/src/main/webapp/agreementList.xhtml
@@ -128,7 +128,7 @@
 			<p:commandButton value="#{msgs.no}" onclick="w_confirm.hide();" type="button" />
 		</p:confirmDialog>
 
-		<h:commandButton action="#{agreementListPCB.backToHome()}" value="Home" immediate="true" />
+		<p:commandButton action="#{agreementListPCB.backToHome()}" value="Home" immediate="true" />
 
 	</h:form>
 
