--- a/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
+++ b/Jama/src/main/webapp/resources/sections/agreementInstallmentsList.xhtml
@@ -41,7 +41,7 @@
 
 
 			<p:commandButton styleClass="list-row-button" icon="ui-icon-search"
-				action="#{installmentWizardPB.viewInstallment()}">
+				action="#{installmentWizardPB.viewInstallment()}" >
 				<f:setPropertyActionListener
 					target="#{installmentWizardPB.returnPage}"
 					value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
@@ -49,7 +49,7 @@
 					target="#{installmentManager.selectedInstalmentId}" />
 			</p:commandButton>
 			<p:commandButton styleClass="list-row-button" icon="ui-icon-wrench"
-				action="#{installmentWizardPB.editInstallment()}">
+				action="#{installmentWizardPB.editInstallment()}" rendered="#{cc.attrs.editingDisable==false}">
 				<f:setPropertyActionListener
 					target="#{installmentWizardPB.returnPage}"
 					value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
@@ -57,7 +57,7 @@
 					target="#{installmentManager.selectedInstalmentId}" />
 			</p:commandButton>
 			<p:commandButton styleClass="list-row-button" icon="ui-icon-trash"
-				oncomplete="delete_confirm.show();">
+				oncomplete="delete_confirm.show();" rendered="#{cc.attrs.editingDisable==false}">
 				<f:setPropertyActionListener
 					target="#{installmentWizardPB.returnPage}"
 					value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
@@ -86,7 +86,7 @@
 
 
 	<h:commandButton action="#{installmentManager.addInstallment()}"
-		value="Aggiungi una rata" ajax="false" immediate="true">
+		value="Aggiungi una rata" ajax="false" immediate="true" rendered="#{cc.attrs.editingDisable == false}">
 		<f:setPropertyActionListener
 			target="#{installmentWizardPB.returnPage}"
 			value="#{cc.attrs.installmentOutcome}"></f:setPropertyActionListener>
