--- a/Jama/src/main/webapp/installmentView.xhtml
+++ b/Jama/src/main/webapp/installmentView.xhtml
@@ -27,16 +27,17 @@
 					bean="#{installmentShareTablePCB}" />
 			</p:tab>
 
-			<ui:include src="/resources/sections/installmentLastStep.xhtml" />
 
 
 
 		</p:tabView>
 		
-		<h:commandButton value="#{msgs.cancel}"
+			<p:commandButton value="back"
 			action="#{installmentWizardPB.cancel()}"
 			actionListener="#{installmentShareTablePCB.toUpdate()}"
 			immediate="true" ajax="false" />
+			
+			
 
 	</h:form>
 
